--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
      document.write("this is my documents")
     </script>
      -->
-
+<h1>tyuiouyhg</h1>
 <!-- <script src="./index.js"></script>        -->
  <script src="./modulas.js"></script>
+
+ <h1>hhah</h1>
+ <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta repellendus minima illum ratione et amet digniptatum fuga, delectus, soluta quod! Culpa expedita earum vero placeat rerum magnam magni.</p>
+ <button>click</button>
+ <ul>
+    <li>fgh</li>
+    <li>fgh</li>
+    <li>fgh</li>
+    <li>fgh</li>
+ </ul>
 
   
 </body>
